# video-stream

./: .gitignore  Cargo.toml  README.md
output/7a5aafbb-31e2-43e2-9cb9-72a9ab24b651/: master.m3u8
output/7a5aafbb-31e2-43e2-9cb9-72a9ab24b651/144p/: playlist.m3u8  segement_000.ts  segement_001.ts
output/7a5aafbb-31e2-43e2-9cb9-72a9ab24b651/240p/: segement_000.ts  segement_001.ts
output/7a5aafbb-31e2-43e2-9cb9-72a9ab24b651/360p/: segement_000.ts  segement_001.ts
output/7a5aafbb-31e2-43e2-9cb9-72a9ab24b651/480p/: segement_000.ts  segement_001.ts
src/: cli.rs  ladder.rs  main.rs  manifest.rs  probe.rs  server.rs  transcode.rs
